# semantic-terminal

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: loc-badge.yml
semantic_terminal/: __init__.py  ai.py  cli.py  config.py  configure.py  history.py  wrapper_setup.py
semantic_terminal/assets/: sem-wrapper.ps1  sem-wrapper.sh
